@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,246 +16,54 @@
 
 package org.polypheny.db.adapter;
 
-
-import com.google.gson.JsonDeserializationContext;
-import com.google.gson.JsonDeserializer;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParseException;
-import java.io.InputStream;
-import java.lang.annotation.Annotation;
-import java.lang.annotation.ElementType;
-import java.lang.annotation.Inherited;
-import java.lang.annotation.Repeatable;
-import java.lang.annotation.Retention;
-import java.lang.annotation.RetentionPolicy;
-import java.lang.annotation.Target;
-import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
 import lombok.Getter;
-import lombok.Setter;
-import lombok.experimental.Accessors;
-import org.polypheny.db.adapter.DeployMode.DeploySetting;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.calcite.linq4j.tree.Expression;
+import org.apache.calcite.linq4j.tree.Expressions;
+import org.polypheny.db.adapter.annotations.AdapterProperties;
 import org.polypheny.db.catalog.Catalog;
-import org.polypheny.db.catalog.entity.CatalogColumnPlacement;
-import org.polypheny.db.catalog.entity.CatalogTable;
+import org.polypheny.db.catalog.catalogs.AdapterCatalog;
+import org.polypheny.db.catalog.entity.physical.PhysicalColumn;
+import org.polypheny.db.catalog.entity.physical.PhysicalEntity;
+import org.polypheny.db.catalog.entity.physical.PhysicalTable;
+import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
+import org.polypheny.db.catalog.logistic.DataModel;
 import org.polypheny.db.config.Config;
 import org.polypheny.db.config.Config.ConfigListener;
-import org.polypheny.db.config.ConfigDocker;
-import org.polypheny.db.config.ConfigObject;
-import org.polypheny.db.config.RuntimeConfig;
+import org.polypheny.db.docker.DockerContainer;
 import org.polypheny.db.docker.DockerManager;
 import org.polypheny.db.information.Information;
 import org.polypheny.db.information.InformationGroup;
 import org.polypheny.db.information.InformationManager;
 import org.polypheny.db.information.InformationPage;
 import org.polypheny.db.information.InformationTable;
-import org.polypheny.db.jdbc.Context;
-import org.polypheny.db.schema.Schema;
-import org.polypheny.db.schema.SchemaPlus;
-import org.polypheny.db.schema.Table;
+import org.polypheny.db.prepare.Context;
+import org.polypheny.db.schema.Namespace;
+import org.polypheny.db.schema.types.Expressible;
 import org.polypheny.db.transaction.PolyXid;
 
-public abstract class Adapter {
+
+@Getter
+@Slf4j
+public abstract class Adapter<ACatalog extends AdapterCatalog> implements Scannable, Expressible {
 
     private final AdapterProperties properties;
     protected final DeployMode deployMode;
+    protected String deploymentId;
+    public final String adapterName;
+    public final ACatalog adapterCatalog;
 
 
-    @Target(ElementType.TYPE)
-    @Retention(RetentionPolicy.RUNTIME)
-    public @interface AdapterProperties {
-
-        String name();
-
-        String description();
-
-        DeployMode[] usedModes();
-
-    }
-
-
-    @Inherited
-    @Target(ElementType.TYPE)
-    @Repeatable(AdapterSettingString.List.class)
-    @Retention(RetentionPolicy.RUNTIME)
-    public @interface AdapterSettingString {
-
-        String name();
-
-        boolean canBeNull() default false;
-
-        boolean required() default true;
-
-        boolean modifiable() default false;
-
-        String description() default "";
-
-        String defaultValue();
-
-        int position() default 100;
-
-        DeploySetting[] appliesTo() default DeploySetting.DEFAULT;
-
-        @Inherited
-        @Target(ElementType.TYPE)
-        @Retention(RetentionPolicy.RUNTIME)
-        @interface List {
-
-            AdapterSettingString[] value();
-
-        }
-
-    }
-
-
-    @Inherited
-    @Repeatable(AdapterSettingInteger.List.class)
-    @Target(ElementType.TYPE)
-    @Retention(RetentionPolicy.RUNTIME)
-    public @interface AdapterSettingInteger {
-
-        String name();
-
-        boolean canBeNull() default false;
-
-        boolean required() default true;
-
-        boolean modifiable() default false;
-
-        String description() default "";
-
-        int defaultValue();
-
-        int position() default 100;
-
-        DeploySetting[] appliesTo() default DeploySetting.DEFAULT;
-
-        @Inherited
-        @Target(ElementType.TYPE)
-        @Retention(RetentionPolicy.RUNTIME)
-        @interface List {
-
-            AdapterSettingInteger[] value();
-
-        }
-
-    }
-
-
-    @Inherited
-    @Repeatable(AdapterSettingBoolean.List.class)
-    @Target(ElementType.TYPE)
-    @Retention(RetentionPolicy.RUNTIME)
-    public @interface AdapterSettingBoolean {
-
-        String name();
-
-        boolean canBeNull() default false;
-
-        boolean required() default true;
-
-        boolean modifiable() default false;
-
-        String description() default "";
-
-        boolean defaultValue();
-
-        int position() default 100;
-
-        DeploySetting[] appliesTo() default DeploySetting.DEFAULT;
-
-        @Inherited
-        @Target(ElementType.TYPE)
-        @Retention(RetentionPolicy.RUNTIME)
-        @interface List {
-
-            AdapterSettingBoolean[] value();
-
-        }
-
-    }
-
-
-    @Inherited
-    @Repeatable(AdapterSettingList.List.class)
-    @Target(ElementType.TYPE)
-    @Retention(RetentionPolicy.RUNTIME)
-    public @interface AdapterSettingList {
-
-        String name();
-
-        boolean canBeNull() default false;
-
-        boolean required() default true;
-
-        boolean modifiable() default false;
-
-        String description() default "";
-
-        String[] options();
-
-        int position() default 100;
-
-        DeploySetting[] appliesTo() default DeploySetting.DEFAULT;
-
-        @Inherited
-        @Target(ElementType.TYPE)
-        @Retention(RetentionPolicy.RUNTIME)
-        @interface List {
-
-            AdapterSettingList[] value();
-
-        }
-
-    }
-
-
-    @Inherited
-    @Target(ElementType.TYPE)
-    @Repeatable(AdapterSettingDirectory.List.class)
-    @Retention(RetentionPolicy.RUNTIME)
-    public @interface AdapterSettingDirectory {
-
-        String name();
-
-        boolean canBeNull() default false;
-
-        boolean required() default true;
-
-        boolean modifiable() default false;
-
-        String description() default "";
-
-        int position() default 100;
-
-        DeploySetting[] appliesTo() default DeploySetting.DEFAULT;
-
-        @Inherited
-        @Target(ElementType.TYPE)
-        @Retention(RetentionPolicy.RUNTIME)
-        @interface List {
-
-            AdapterSettingDirectory[] value();
-
-        }
-
-    }
-
-
-    @Getter
-    private final int adapterId;
-    @Getter
+    public final long adapterId;
     private final String uniqueName;
 
     protected final Map<String, String> settings;
@@ -265,46 +73,68 @@ public abstract class Adapter {
     protected final List<Information> informationElements;
     private ConfigListener listener;
 
+    private final Map<Long, Namespace> namespaces = new ConcurrentHashMap<>();
 
-    public Adapter( int adapterId, String uniqueName, Map<String, String> settings ) {
+
+    public Adapter( long adapterId, String uniqueName, Map<String, String> settings, DeployMode mode, ACatalog catalog ) {
+        this.adapterCatalog = catalog;
         this.properties = getClass().getAnnotation( AdapterProperties.class );
         if ( getClass().getAnnotation( AdapterProperties.class ) == null ) {
-            throw new RuntimeException( "The used adapter does not annotate its properties correctly." );
-        }
-        if ( !settings.containsKey( "mode" ) ) {
-            throw new RuntimeException( "The adapter does not specify a mode which is necessary." );
+            throw new GenericRuntimeException( "The used adapter does not annotate its properties correctly." );
         }
 
-        this.deployMode = DeployMode.fromString( settings.get( "mode" ) );
+        this.deployMode = mode;
 
         this.adapterId = adapterId;
         this.uniqueName = uniqueName;
+        this.adapterName = properties.name();
         // Make sure the settings are actually valid
         this.validateSettings( settings, true );
-        this.settings = settings;
+        this.settings = new HashMap<>( settings );
 
         informationPage = new InformationPage( uniqueName );
         informationGroups = new ArrayList<>();
         informationElements = new ArrayList<>();
 
-        // this is need for docker deployable stores and should not interfere too much with other adapters
+        // This is need for docker deployable stores and should not interfere too much with other adapters
         if ( deployMode == DeployMode.DOCKER ) {
             this.listener = attachListener( Integer.parseInt( settings.get( "instanceId" ) ) );
         }
+        Catalog.getInstance().addStoreSnapshot( catalog );
     }
 
 
-    public String getAdapterName() {
-        return properties.name();
+    @Override
+    public Expression asExpression() {
+        return Expressions.convert_( Expressions.call( Expressions.call( AdapterManager.ADAPTER_MANAGER_EXPRESSION, "getAdapter", Expressions.constant( adapterId ) ), "orElseThrow" ), Adapter.class );
     }
 
-    public abstract void createNewSchema( SchemaPlus rootSchema, String name );
 
-    public abstract Table createTableSchema( CatalogTable combinedTable, List<CatalogColumnPlacement> columnPlacementsOnStore );
+    public Expression getCatalogAsExpression() {
+        return Expressions.field( asExpression(), "adapterCatalog" );
+    }
 
-    public abstract Schema getCurrentSchema();
 
-    public abstract void truncate( Context context, CatalogTable table );
+    public Namespace getNamespace( long id ) {
+        return namespaces.get( id );
+    }
+
+
+    public void putNamespace( Namespace namespace ) {
+        this.namespaces.put( namespace.getId(), namespace );
+    }
+
+
+    public Expression getNamespaceAsExpression( long id ) {
+        return Expressions.call( asExpression(), "getNamespace", Expressions.constant( id ) );
+    }
+
+
+    public abstract void updateNamespace( String name, long id );
+
+    public abstract Namespace getCurrentNamespace();
+
+    public abstract void truncate( Context context, long allocId );
 
     public abstract boolean prepare( PolyXid xid );
 
@@ -313,21 +143,17 @@ public abstract class Adapter {
     public abstract void rollback( PolyXid xid );
 
 
-    public List<AbstractAdapterSetting> getAvailableSettings() {
-        return AbstractAdapterSetting.fromAnnotations( getClass().getAnnotations(), properties )
-                .values()
-                .stream()
-                .flatMap( Collection::stream )
-                .collect( Collectors.toList() );
+    public List<AbstractAdapterSetting> getAvailableSettings( Class<?> clazz ) {
+        return AbstractAdapterSetting.fromAnnotations( clazz.getAnnotations(), properties );
     }
 
 
     public void shutdownAndRemoveListeners() {
         shutdown();
         if ( deployMode == DeployMode.DOCKER ) {
-            RuntimeConfig.DOCKER_INSTANCES.removeObserver( this.listener );
+            DockerManager.getInstance().removeListener( this.listener );
+            DockerContainer.getContainerByUUID( deploymentId ).ifPresent( DockerContainer::destroy );
         }
-        DockerManager.getInstance().destroyAll( getAdapterId() );
     }
 
 
@@ -350,7 +176,6 @@ public abstract class Adapter {
                 updatedSettings.add( newSetting.getKey() );
             }
         }
-
         return updatedSettings;
     }
 
@@ -365,36 +190,35 @@ public abstract class Adapter {
 
     public Map<String, String> getCurrentSettings() {
         // we unwrap the dockerInstance details here, for convenience
-        if ( deployMode == DeployMode.DOCKER ) {
-            Map<String, String> dockerSettings = RuntimeConfig.DOCKER_INSTANCES
-                    .getWithId( ConfigDocker.class, Integer.parseInt( settings.get( "instanceId" ) ) ).getSettings();
-            settings.forEach( dockerSettings::put );
-            return dockerSettings;
-        }
         return settings;
     }
 
 
     protected void validateSettings( Map<String, String> newSettings, boolean initialSetup ) {
-        for ( AbstractAdapterSetting s : getAvailableSettings() ) {
+        for ( AbstractAdapterSetting s : getAvailableSettings( getClass() ) ) {
             // we only need to check settings which apply to the used mode
             if ( !s.appliesTo
                     .stream()
-                    .map( setting -> setting.getModes( Arrays.asList( properties.usedModes() ) ) )
-                    .collect( Collectors.toList() ).contains( deployMode ) ) {
+                    .flatMap( setting -> setting.getModes( List.of( properties.usedModes() ) ).stream() )
+                    .toList().contains( deployMode ) ) {
                 continue;
             }
+            if ( !initialSetup && settings.containsKey( s.name ) && settings.get( s.name ).equals( s.getValue() ) ) {
+                // we can leave the setting as it is
+                return;
+            }
+
             if ( newSettings.containsKey( s.name ) ) {
                 if ( s.modifiable || initialSetup ) {
                     String newValue = newSettings.get( s.name );
                     if ( !s.canBeNull && newValue == null ) {
-                        throw new RuntimeException( "Setting \"" + s.name + "\" cannot be null." );
+                        throw new GenericRuntimeException( "Setting \"" + s.name + "\" cannot be null." );
                     }
                 } else {
-                    throw new RuntimeException( "Setting \"" + s.name + "\" cannot be modified." );
+                    throw new GenericRuntimeException( "Setting \"" + s.name + "\" cannot be modified." );
                 }
             } else if ( s.required && initialSetup ) {
-                throw new RuntimeException( "Setting \"" + s.name + "\" must be present." );
+                throw new GenericRuntimeException( "Setting \"" + s.name + "\" must be present." );
             }
         }
     }
@@ -418,7 +242,7 @@ public abstract class Adapter {
      * Removes all information objects defined in this adapter from the InformationManager
      */
     public void removeInformationPage() {
-        if ( informationElements.size() > 0 ) {
+        if ( !informationElements.isEmpty() ) {
             InformationManager im = InformationManager.getInstance();
             im.removeInformation( informationElements.toArray( new Information[0] ) );
             informationGroups.forEach( im::removeGroup );
@@ -428,7 +252,7 @@ public abstract class Adapter {
 
 
     /**
-     * Builds and adds an new information group, observing physical naming of columns, to the provided information objects
+     * Builds and adds a new information group, observing physical naming of columns, to the provided information objects
      */
     public void addInformationPhysicalNames() {
         InformationGroup group = new InformationGroup( informationPage, "Physical Names" );
@@ -440,12 +264,21 @@ public abstract class Adapter {
 
         group.setRefreshFunction( () -> {
             physicalColumnNames.reset();
-            Catalog.getInstance().getColumnPlacementsOnAdapter( adapterId ).forEach( placement -> {
-                physicalColumnNames.addRow(
-                        placement.columnId,
-                        Catalog.getInstance().getColumn( placement.columnId ).name,
-                        placement.physicalSchemaName + "." + placement.physicalTableName + "." + placement.physicalColumnName );
-            } );
+            Collection<PhysicalEntity> physicalsOnAdapter = getAdapterCatalog().physicals.values();
+
+            for ( PhysicalEntity entity : physicalsOnAdapter ) {
+                if ( entity.dataModel != DataModel.RELATIONAL || entity.unwrap( PhysicalTable.class ).isEmpty() ) {
+                    continue;
+                }
+                PhysicalTable physicalTable = entity.unwrap( PhysicalTable.class ).get();
+
+                for ( PhysicalColumn column : physicalTable.columns ) {
+                    physicalColumnNames.addRow(
+                            column.id,
+                            column.name,
+                            physicalTable.namespaceName + "." + physicalTable.name + "." + column.name );
+                }
+            }
         } );
 
         informationGroups.add( group );
@@ -463,20 +296,16 @@ public abstract class Adapter {
         ConfigListener listener = new ConfigListener() {
             @Override
             public void onConfigChange( Config c ) {
-                List<ConfigDocker> configs = RuntimeConfig.DOCKER_INSTANCES.getList( ConfigDocker.class );
-                if ( !configs.stream().map( conf -> conf.id ).collect( Collectors.toList() ).contains( dockerInstanceId ) ) {
-                    throw new RuntimeException( "This DockerInstance has adapters on it, while this is the case it can not be deleted." );
-                }
-                resetDockerConnection( RuntimeConfig.DOCKER_INSTANCES.getWithId( ConfigDocker.class, dockerInstanceId ) );
+                resetDockerConnection();
             }
 
 
             @Override
             public void restart( Config c ) {
-                resetDockerConnection( RuntimeConfig.DOCKER_INSTANCES.getWithId( ConfigDocker.class, dockerInstanceId ) );
+                resetDockerConnection();
             }
         };
-        RuntimeConfig.DOCKER_INSTANCES.addObserver( listener );
+        DockerManager.getInstance().addListener( listener );
         return listener;
     }
 
@@ -484,405 +313,10 @@ public abstract class Adapter {
     /**
      * This function is called automatically if the configuration of connected Docker instance changes,
      * it is responsible for handling regenerating the connection if the Docker changes demand it
-     *
-     * @param c the new configuration of the corresponding Docker instance
      */
-    protected void resetDockerConnection( ConfigDocker c ) {
-        throw new RuntimeException( getAdapterName() + " uses this Docker instance and does not support to dynamically change it." );
+    protected void resetDockerConnection() {
+        throw new GenericRuntimeException( getUniqueName() + " uses this Docker instance and does not support to dynamically change it." );
     }
 
-
-    @Accessors(chain = true)
-    public static abstract class AbstractAdapterSetting {
-
-        public final String name;
-        public final boolean canBeNull;
-        public final boolean required;
-        public final boolean modifiable;
-        private final int position;
-        @Setter
-        public String description;
-
-        @Getter
-        private final List<DeploySetting> appliesTo;
-
-
-        public AbstractAdapterSetting( final String name, final boolean canBeNull, final boolean required, final boolean modifiable, List<DeploySetting> appliesTo, int position ) {
-            this.name = name;
-            this.canBeNull = canBeNull;
-            this.required = required;
-            this.modifiable = modifiable;
-            this.position = position;
-            this.appliesTo = appliesTo;
-        }
-
-
-        /**
-         * Method generates the correlated AdapterSettings from the provided AdapterAnnotations,
-         * Repeatable Annotations are packed inside the underlying Lists of each AdapterSetting
-         * as those AdapterSettings belong to a specific adapter the AdapterProperties are used to
-         * unpack DeploySettings.ALL to the available modes correctly
-         *
-         * @param annotations collection of annotations
-         * @param properties which are defined by the corresponding Adapter
-         * @return a map containing the available modes and the corresponding collections of AdapterSettings
-         */
-        public static Map<String, List<AbstractAdapterSetting>> fromAnnotations( Annotation[] annotations, AdapterProperties properties ) {
-            Map<String, List<AbstractAdapterSetting>> settings = new HashMap<>();
-
-            for ( Annotation annotation : annotations ) {
-                if ( annotation instanceof AdapterSettingString ) {
-                    mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingString.fromAnnotation( (AdapterSettingString) annotation ) );
-                } else if ( annotation instanceof AdapterSettingString.List ) {
-                    Arrays.stream( ((AdapterSettingString.List) annotation).value() ).forEach( el -> mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingString.fromAnnotation( el ) ) );
-                } else if ( annotation instanceof AdapterSettingBoolean ) {
-                    mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingBoolean.fromAnnotation( (AdapterSettingBoolean) annotation ) );
-                } else if ( annotation instanceof AdapterSettingBoolean.List ) {
-                    Arrays.stream( ((AdapterSettingBoolean.List) annotation).value() ).forEach( el -> mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingBoolean.fromAnnotation( el ) ) );
-                } else if ( annotation instanceof AdapterSettingInteger ) {
-                    mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingInteger.fromAnnotation( (AdapterSettingInteger) annotation ) );
-                } else if ( annotation instanceof AdapterSettingInteger.List ) {
-                    Arrays.stream( ((AdapterSettingInteger.List) annotation).value() ).forEach( el -> mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingInteger.fromAnnotation( el ) ) );
-                } else if ( annotation instanceof AdapterSettingList ) {
-                    mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingList.fromAnnotation( (AdapterSettingList) annotation ) );
-                } else if ( annotation instanceof AdapterSettingList.List ) {
-                    Arrays.stream( ((AdapterSettingList.List) annotation).value() ).forEach( el -> mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingList.fromAnnotation( el ) ) );
-                } else if ( annotation instanceof AdapterSettingDirectory ) {
-                    mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingDirectory.fromAnnotation( (AdapterSettingDirectory) annotation ) );
-                } else if ( annotation instanceof AdapterSettingDirectory.List ) {
-                    Arrays.stream( ((AdapterSettingDirectory.List) annotation).value() ).forEach( el -> mergeSettings( settings, properties.usedModes(), AbstractAdapterSettingDirectory.fromAnnotation( el ) ) );
-                }
-            }
-
-            settings.forEach( ( key, values ) -> values.sort( Comparator.comparingInt( value -> value.position ) ) );
-            return settings;
-        }
-
-
-        /**
-         * Merges the provided setting into the provided map of AdapterSettings
-         *
-         * @param settings already correctly sorted settings
-         * @param deployModes the deployment modes which are supported by this specific adapter
-         * @param setting the setting which is merge into the map
-         */
-        private static void mergeSettings( Map<String, List<AbstractAdapterSetting>> settings, DeployMode[] deployModes, AbstractAdapterSetting setting ) {
-            // we need to unpack the underlying DeployModes
-            for ( DeployMode mode : setting.appliesTo
-                    .stream()
-                    .flatMap( mode -> mode.getModes( Arrays.asList( deployModes ) ).stream() )
-                    .collect( Collectors.toList() ) ) {
-
-                if ( settings.containsKey( mode.getName() ) ) {
-                    settings.get( mode.getName() ).add( setting );
-                } else {
-                    List<AbstractAdapterSetting> temp = new ArrayList<>();
-                    temp.add( setting );
-                    settings.put( mode.getName(), temp );
-                }
-            }
-        }
-
-
-        /**
-         * In most subclasses, this method returns the defaultValue, because the UI overrides the defaultValue when a new value is set.
-         */
-        public abstract String getValue();
-
-
-    }
-
-
-    public static class AbstractAdapterSettingInteger extends AbstractAdapterSetting {
-
-        private final String type = "Integer";
-        public final Integer defaultValue;
-
-
-        public AbstractAdapterSettingInteger( String name, boolean canBeNull, boolean required, boolean modifiable, Integer defaultValue, List<DeploySetting> modes, int position ) {
-            super( name, canBeNull, required, modifiable, modes, position );
-            this.defaultValue = defaultValue;
-        }
-
-
-        public static AbstractAdapterSetting fromAnnotation( AdapterSettingInteger annotation ) {
-            return new AbstractAdapterSettingInteger(
-                    annotation.name(),
-                    annotation.canBeNull(),
-                    annotation.required(),
-                    annotation.modifiable(),
-                    annotation.defaultValue(),
-                    Arrays.asList( annotation.appliesTo() ),
-                    annotation.position() );
-        }
-
-
-        @Override
-        public String getValue() {
-            return defaultValue.toString();
-        }
-
-    }
-
-
-    public static class AbstractAdapterSettingString extends AbstractAdapterSetting {
-
-        private final String type = "String";
-        public final String defaultValue;
-
-
-        public AbstractAdapterSettingString( String name, boolean canBeNull, boolean required, boolean modifiable, String defaultValue, List<DeploySetting> modes, int position ) {
-            super( name, canBeNull, required, modifiable, modes, position );
-            this.defaultValue = defaultValue;
-        }
-
-
-        public static AbstractAdapterSetting fromAnnotation( AdapterSettingString annotation ) {
-            return new AbstractAdapterSettingString(
-                    annotation.name(),
-                    annotation.canBeNull(),
-                    annotation.required(),
-                    annotation.modifiable(),
-                    annotation.defaultValue(),
-                    Arrays.asList( annotation.appliesTo() ),
-                    annotation.position() );
-        }
-
-
-        @Override
-        public String getValue() {
-            return defaultValue;
-        }
-
-    }
-
-
-    public static class AbstractAdapterSettingBoolean extends AbstractAdapterSetting {
-
-        private final String type = "Boolean";
-        public final boolean defaultValue;
-
-
-        public AbstractAdapterSettingBoolean( String name, boolean canBeNull, boolean required, boolean modifiable, boolean defaultValue, List<DeploySetting> modes, int position ) {
-            super( name, canBeNull, required, modifiable, modes, position );
-            this.defaultValue = defaultValue;
-        }
-
-
-        public static AbstractAdapterSettingBoolean fromAnnotation( AdapterSettingBoolean annotation ) {
-            return new AbstractAdapterSettingBoolean(
-                    annotation.name(),
-                    annotation.canBeNull(),
-                    annotation.required(),
-                    annotation.modifiable(),
-                    annotation.defaultValue(),
-                    Arrays.asList( annotation.appliesTo() ),
-                    annotation.position() );
-        }
-
-
-        @Override
-        public String getValue() {
-            return Boolean.toString( defaultValue );
-        }
-
-    }
-
-
-    @Accessors(chain = true)
-    public static class AbstractAdapterSettingList extends AbstractAdapterSetting {
-
-        private final String type = "List";
-        public List<String> options;
-        @Setter
-        String defaultValue;
-        public boolean dynamic = false;
-
-
-        public AbstractAdapterSettingList( String name, boolean canBeNull, boolean required, boolean modifiable, List<String> options, List<DeploySetting> modes, int position ) {
-            super( name, canBeNull, required, modifiable, modes, position );
-            this.options = options;
-            if ( options.size() > 0 ) {
-                this.defaultValue = options.get( 0 );
-            }
-        }
-
-
-        public static AbstractAdapterSetting fromAnnotation( AdapterSettingList annotation ) {
-            return new AbstractAdapterSettingList(
-                    annotation.name(),
-                    annotation.canBeNull(),
-                    annotation.required(),
-                    annotation.modifiable(),
-                    Arrays.asList( annotation.options() ),
-                    Arrays.asList( annotation.appliesTo() ),
-                    annotation.position() );
-        }
-
-
-        @Override
-        public String getValue() {
-            return defaultValue;
-        }
-
-    }
-
-
-    /**
-     * BindableSettingsList which allows to configure mapped AdapterSettings, which expose an alias in the frontend
-     * but assign an corresponding id when the value is chosen
-     *
-     * @param <T>
-     */
-    @Accessors(chain = true)
-    public static class BindableAbstractAdapterSettingsList<T extends ConfigObject> extends AbstractAdapterSettingList {
-
-        private final transient Function<T, String> mapper;
-        private final transient Class<T> clazz;
-        private Map<Integer, String> alias;
-        private final String nameAlias;
-        public RuntimeConfig boundConfig;
-
-
-        public BindableAbstractAdapterSettingsList( String name, String nameAlias, boolean canBeNull, boolean required, boolean modifiable, List<T> options, Function<T, String> mapper, Class<T> clazz ) {
-            super( name, canBeNull, required, modifiable, options.stream().map( ( el ) -> String.valueOf( el.getId() ) ).collect( Collectors.toList() ), new ArrayList<>(), 1000 );
-            this.mapper = mapper;
-            this.clazz = clazz;
-            this.dynamic = true;
-            this.nameAlias = nameAlias;
-            this.alias = options.stream().collect( Collectors.toMap( ConfigObject::getId, mapper ) );
-        }
-
-
-        /**
-         * This allows to bind this option to an existing RuntimeConfig,
-         * which will update when the bound option changes
-         *
-         * @param config the RuntimeConfig which is bound
-         * @return chain method to use the object
-         */
-        public AbstractAdapterSetting bind( RuntimeConfig config ) {
-            this.boundConfig = config;
-            ConfigListener listener = new ConfigListener() {
-                @Override
-                public void onConfigChange( Config c ) {
-                    refreshFromConfig();
-                }
-
-
-                @Override
-                public void restart( Config c ) {
-                    refreshFromConfig();
-                }
-            };
-            config.addObserver( listener );
-
-            return this;
-        }
-
-
-        public void refreshFromConfig() {
-            if ( boundConfig != null ) {
-                options = boundConfig.getList( clazz ).stream().map( ( el ) -> String.valueOf( el.id ) ).collect( Collectors.toList() );
-                alias = boundConfig.getList( clazz ).stream().collect( Collectors.toMap( ConfigObject::getId, mapper ) );
-                if ( options.size() > 0 ) {
-                    this.defaultValue = options.get( 0 );
-                }
-            }
-        }
-
-
-    }
-
-
-    @Accessors(chain = true)
-    public static class AbstractAdapterSettingDirectory extends AbstractAdapterSetting {
-
-        private final String type = "Directory";
-        @Setter
-        public String directory;
-        //This field is necessary for the the UI and needs to be initialized to be serialized to JSON.
-        @Setter
-        public String[] fileNames = new String[]{ "" };
-        public transient final Map<String, InputStream> inputStreams;
-
-
-        public AbstractAdapterSettingDirectory( String name, boolean canBeNull, boolean required, boolean modifiable, List<DeploySetting> modes, int position ) {
-            super( name, canBeNull, required, modifiable, modes, position );
-            //so it will be serialized
-            this.directory = "";
-            this.inputStreams = new HashMap<>();
-        }
-
-
-        public static AbstractAdapterSetting fromAnnotation( AdapterSettingDirectory annotation ) {
-            return new AbstractAdapterSettingDirectory(
-                    annotation.name(),
-                    annotation.canBeNull(),
-                    annotation.required(),
-                    annotation.modifiable(),
-                    Arrays.asList( annotation.appliesTo() ),
-                    annotation.position()
-            );
-        }
-
-
-        @Override
-        public String getValue() {
-            return directory;
-        }
-
-    }
-
-
-    //see https://stackoverflow.com/questions/19588020/gson-serialize-a-list-of-polymorphic-objects/22081826#22081826
-    public static class AdapterSettingDeserializer implements JsonDeserializer<AbstractAdapterSetting> {
-
-        @Override
-        public AbstractAdapterSetting deserialize( JsonElement json, Type typeOfT, JsonDeserializationContext context ) throws JsonParseException {
-            JsonObject jsonObject = json.getAsJsonObject();
-            String type = jsonObject.get( "type" ).getAsString();
-            String name = jsonObject.get( "name" ).getAsString();
-            boolean canBeNull = jsonObject.get( "canBeNull" ).getAsBoolean();
-            boolean required = jsonObject.get( "required" ).getAsBoolean();
-            boolean modifiable = jsonObject.get( "modifiable" ).getAsBoolean();
-            int position = jsonObject.get( "position" ).getAsInt();
-            String description = null;
-            if ( jsonObject.get( "description" ) != null ) {
-                description = jsonObject.get( "description" ).getAsString();
-            }
-
-            AbstractAdapterSetting out;
-            switch ( type ) {
-                case "Integer":
-                    Integer integer = jsonObject.get( "defaultValue" ).getAsInt();
-                    out = new AbstractAdapterSettingInteger( name, canBeNull, required, modifiable, integer, new ArrayList<>(), position );
-                    break;
-                case "String":
-                    String string = jsonObject.get( "defaultValue" ).getAsString();
-                    out = new AbstractAdapterSettingString( name, canBeNull, required, modifiable, string, new ArrayList<>(), position );
-                    break;
-                case "Boolean":
-                    boolean bool = jsonObject.get( "defaultValue" ).getAsBoolean();
-                    out = new AbstractAdapterSettingBoolean( name, canBeNull, required, modifiable, bool, new ArrayList<>(), position );
-                    break;
-                case "List":
-                    List<String> options = context.deserialize( jsonObject.get( "options" ), List.class );
-                    String defaultValue = context.deserialize( jsonObject.get( "defaultValue" ), String.class );
-                    out = new AbstractAdapterSettingList( name, canBeNull, required, modifiable, options, new ArrayList<>(), position ).setDefaultValue( defaultValue );
-                    break;
-                case "Directory":
-                    String directory = context.deserialize( jsonObject.get( "directory" ), String.class );
-                    String[] fileNames = context.deserialize( jsonObject.get( "fileNames" ), String[].class );
-                    out = new AbstractAdapterSettingDirectory( name, canBeNull, required, modifiable, new ArrayList<>(), position ).setDirectory( directory ).setFileNames( fileNames );
-                    break;
-                default:
-                    throw new RuntimeException( "Could not deserialize AdapterSetting of type " + type );
-            }
-            out.setDescription( description );
-            return out;
-        }
-
-    }
 
 }
