@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2021 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,27 +19,27 @@ package org.polypheny.db.adapter.index;
 
 import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 import lombok.Getter;
-import org.apache.calcite.avatica.MetaImpl;
-import org.polypheny.db.catalog.entity.CatalogSchema;
-import org.polypheny.db.catalog.entity.CatalogTable;
-import org.polypheny.db.jdbc.PolyphenyDbSignature;
+import org.polypheny.db.PolyImplementation;
+import org.polypheny.db.ResultIterator;
+import org.polypheny.db.algebra.AlgNode;
+import org.polypheny.db.algebra.AlgRoot;
+import org.polypheny.db.algebra.constant.Kind;
+import org.polypheny.db.algebra.core.Values;
+import org.polypheny.db.algebra.type.AlgDataType;
+import org.polypheny.db.catalog.entity.logical.LogicalNamespace;
+import org.polypheny.db.catalog.entity.logical.LogicalTable;
 import org.polypheny.db.processing.QueryProcessor;
-import org.polypheny.db.rel.RelNode;
-import org.polypheny.db.rel.RelRoot;
-import org.polypheny.db.rel.core.Values;
-import org.polypheny.db.rel.type.RelDataType;
 import org.polypheny.db.rex.RexBuilder;
 import org.polypheny.db.rex.RexLiteral;
-import org.polypheny.db.sql.SqlKind;
-import org.polypheny.db.tools.RelBuilder;
+import org.polypheny.db.tools.AlgBuilder;
 import org.polypheny.db.transaction.PolyXid;
 import org.polypheny.db.transaction.Statement;
 import org.polypheny.db.transaction.Transaction;
 import org.polypheny.db.type.PolyType;
+import org.polypheny.db.type.entity.PolyValue;
 import org.polypheny.db.util.Pair;
 
 
@@ -53,11 +53,11 @@ public abstract class Index {
 
     // The logical schema of the table this index is for
     @Getter
-    protected CatalogSchema schema;
+    protected LogicalNamespace schema;
 
     // The logical table this index is for
     @Getter
-    protected CatalogTable table;
+    protected LogicalTable table;
 
     // The list of columns over which the index was created
     protected List<String> columns;
@@ -89,23 +89,24 @@ public abstract class Index {
         Statement statement = transaction.createStatement();
 
         // Prepare query
-        final RelBuilder builder = RelBuilder.create( statement );
+        final AlgBuilder builder = AlgBuilder.create( statement );
         List<String> cols = new ArrayList<>( columns );
         if ( !columns.equals( targetColumns ) ) {
             cols.addAll( targetColumns );
         }
-        final RelNode scan = builder
-                .scan( ImmutableList.of( table.getSchemaName(), table.name ) )
-                .project( cols.stream().map( builder::field ).collect( Collectors.toList() ) )
+        final AlgNode scan = builder
+                .relScan( table )
+                .project( cols.stream().map( builder::field ).toList() )
                 .build();
         final QueryProcessor processor = statement.getQueryProcessor();
-        final PolyphenyDbSignature signature = processor.prepareQuery( RelRoot.of( scan, SqlKind.SELECT ) );
+        final PolyImplementation implementation = processor.prepareQuery( AlgRoot.of( scan, Kind.SELECT ), false );
         // Execute query
-        final Iterable<Object> enumerable = signature.enumerable( statement.getDataContext() );
-        final Iterator<Object> iterator = enumerable.iterator();
-        final List<List<Object>> rows = MetaImpl.collect( signature.cursorFactory, iterator, new ArrayList<>() );
-        final List<Pair<List<Object>, List<Object>>> kv = new ArrayList<>( rows.size() );
-        for ( final List<Object> row : rows ) {
+
+        ResultIterator iterator = implementation.execute( statement, 1, true, false, true );
+        final List<List<PolyValue>> rows = iterator.getAllRowsAndClose();
+
+        final List<Pair<List<PolyValue>, List<PolyValue>>> kv = new ArrayList<>( rows.size() );
+        for ( final List<PolyValue> row : rows ) {
             if ( row.size() > columns.size() ) {
                 kv.add( new Pair<>( row.subList( 0, columns.size() ), row.subList( columns.size(), columns.size() + targetColumns.size() ) ) );
             } else {
@@ -131,8 +132,8 @@ public abstract class Index {
      * The default implementation is simply a loop over the iterable.
      * Implementations may choose to override this method.
      */
-    public void insertAll( PolyXid xid, final Iterable<Pair<List<Object>, List<Object>>> values ) {
-        for ( final Pair<List<Object>, List<Object>> row : values ) {
+    public void insertAll( PolyXid xid, final Iterable<Pair<List<PolyValue>, List<PolyValue>>> values ) {
+        for ( final Pair<List<PolyValue>, List<PolyValue>> row : values ) {
             this.insert( xid, row.getKey(), row.getValue() );
         }
     }
@@ -142,8 +143,8 @@ public abstract class Index {
      * The default implementation is simply a loop over the iterable.
      * Implementations may choose to override this method.
      */
-    void insertAll( final Iterable<Pair<List<Object>, List<Object>>> values ) {
-        for ( final Pair<List<Object>, List<Object>> row : values ) {
+    void insertAll( final Iterable<Pair<List<PolyValue>, List<PolyValue>>> values ) {
+        for ( final Pair<List<PolyValue>, List<PolyValue>> row : values ) {
             this.insert( row.getKey(), row.getValue() );
         }
     }
@@ -153,8 +154,8 @@ public abstract class Index {
      * The default implementation is simply a loop over the iterable.
      * Implementations may choose to override this method.
      */
-    public void deleteAll( PolyXid xid, final Iterable<List<Object>> values ) {
-        for ( final List<Object> value : values ) {
+    public void deleteAll( PolyXid xid, final Iterable<List<PolyValue>> values ) {
+        for ( final List<PolyValue> value : values ) {
             this.delete( xid, value );
         }
     }
@@ -164,8 +165,8 @@ public abstract class Index {
      * The default implementation is simply a loop over the iterable.
      * Implementations may choose to override this method.
      */
-    public void deleteAllPrimary( PolyXid xid, final Iterable<Pair<List<Object>, List<Object>>> values ) {
-        for ( final Pair<List<Object>, List<Object>> value : values ) {
+    public void deleteAllPrimary( PolyXid xid, final Iterable<Pair<List<PolyValue>, List<PolyValue>>> values ) {
+        for ( final Pair<List<PolyValue>, List<PolyValue>> value : values ) {
             this.deletePrimary( xid, value.left, value.right );
         }
     }
@@ -175,8 +176,8 @@ public abstract class Index {
      * The default implementation is simply a loop over the iterable.
      * Implementations may choose to override this method.
      */
-    void deleteAll( final Iterable<List<Object>> values ) {
-        for ( final List<Object> value : values ) {
+    void deleteAll( final Iterable<List<PolyValue>> values ) {
+        for ( final List<PolyValue> value : values ) {
             this.delete( value );
         }
     }
@@ -186,8 +187,8 @@ public abstract class Index {
      * The default implementation is simply a loop over the iterable.
      * Implementations may choose to override this method.
      */
-    void deleteAllPrimary( final Iterable<Pair<List<Object>, List<Object>>> values ) {
-        for ( final Pair<List<Object>, List<Object>> value : values ) {
+    void deleteAllPrimary( final Iterable<Pair<List<PolyValue>, List<PolyValue>>> values ) {
+        for ( final Pair<List<PolyValue>, List<PolyValue>> value : values ) {
             this.deletePrimary( value.left, value.right );
         }
     }
@@ -204,29 +205,29 @@ public abstract class Index {
 
     public abstract int size();
 
-    public abstract void insert( final PolyXid xid, final List<Object> key, final List<Object> value );
+    public abstract void insert( final PolyXid xid, final List<PolyValue> key, final List<PolyValue> value );
 
-    abstract void insert( final List<Object> key, final List<Object> value );
+    abstract void insert( final List<PolyValue> key, final List<PolyValue> value );
 
-    public abstract void delete( final PolyXid xid, final List<Object> values );
+    public abstract void delete( final PolyXid xid, final List<PolyValue> values );
 
-    abstract void deletePrimary( final PolyXid xid, final List<Object> key, final List<Object> primary );
+    abstract void deletePrimary( final PolyXid xid, final List<PolyValue> key, final List<PolyValue> primary );
 
-    abstract void delete( final List<Object> values );
+    abstract void delete( final List<PolyValue> values );
 
-    abstract void deletePrimary( final List<Object> key, final List<Object> primary );
+    abstract void deletePrimary( final List<PolyValue> key, final List<PolyValue> primary );
 
-    public abstract boolean contains( final PolyXid xid, final List<Object> value );
+    public abstract boolean contains( final PolyXid xid, final List<PolyValue> value );
 
-    public abstract boolean containsAny( final PolyXid xid, final Iterable<List<Object>> values );
+    public abstract boolean containsAny( final PolyXid xid, final Iterable<List<PolyValue>> values );
 
-    public abstract boolean containsAll( final PolyXid xid, final Iterable<List<Object>> values );
+    public abstract boolean containsAll( final PolyXid xid, final Iterable<List<PolyValue>> values );
 
-    public abstract Values getAsValues( final PolyXid xid, RelBuilder builder, RelDataType rowType );
+    public abstract Values getAsValues( final PolyXid xid, AlgBuilder builder, AlgDataType rowType );
 
-    public abstract Values getAsValues( final PolyXid xid, RelBuilder builder, RelDataType rowType, final List<Object> key );
+    public abstract Values getAsValues( final PolyXid xid, AlgBuilder builder, AlgDataType rowType, final List<PolyValue> key );
 
-    abstract Object getRaw();
+    abstract Map<?, ?> getRaw();
 
 
     interface IndexFactory {
@@ -242,8 +243,8 @@ public abstract class Index {
                 final String method,
                 final Boolean unique,
                 final Boolean persitent,
-                final CatalogSchema schema,
-                final CatalogTable table,
+                final LogicalNamespace schema,
+                final LogicalTable table,
                 final List<String> columns,
                 final List<String> targetColumns );
 
@@ -255,12 +256,12 @@ public abstract class Index {
      */
 
 
-    protected ImmutableList<RexLiteral> makeRexRow( final RelDataType rowType, final RexBuilder rexBuilder, final List<Object> tuple ) {
+    protected ImmutableList<RexLiteral> makeRexRow( final AlgDataType rowType, final RexBuilder rexBuilder, final List<PolyValue> tuple ) {
         assert rowType.getFieldCount() == tuple.size();
         List<RexLiteral> row = new ArrayList<>( tuple.size() );
         for ( int i = 0; i < tuple.size(); ++i ) {
-            final RelDataType type = rowType.getFieldList().get( i ).getType();
-            final Pair<Comparable, PolyType> converted = RexLiteral.convertType( (Comparable) tuple.get( i ), type );
+            final AlgDataType type = rowType.getFields().get( i ).getType();
+            final Pair<PolyValue, PolyType> converted = RexLiteral.convertType( tuple.get( i ), type );
             row.add( new RexLiteral( converted.left, type, converted.right ) );
         }
         return ImmutableList.copyOf( row );
